[package]
name = "rnbt"
version = "0.2.0"
authors = ["mrmarkolinus <marco.battagliotti@gmail.com>, based on work by caelunshun <caelunshun@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.3"
derive-new = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-log = "0.9.0"
flate2 = "1.0.28"
log = "0.4.20"